portfolio line spacing correct

--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -23,7 +23,7 @@
 .portfolio-scroll-bar {
   background: rgb(63, 63, 63);
   height: 100%;
-  width: calc((1 / 7 * 100%) - 0.5rem);
+  width: calc((1 / 7 * 100%) - 1rem);
 }
 
 .project-slider::-webkit-scrollbar {
@@ -46,7 +46,7 @@
 }
 
 .index-column-1 {
-  width: calc((5 / 6 * 100%) + 1.25rem);
+  width: calc(5 / 6 * 100%);
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -65,7 +65,7 @@
   display: flex;
   gap: 0.5rem;
   background: black;
-  height: 80%;
+  height: 75%;
 }
 
 .index-project-list {
@@ -183,7 +183,7 @@
 
 .card-row-2 {
   background: white;
-  height: 20%;
+  height: 25%;
   display: flex;
   gap: 0.5rem;
 }
@@ -209,7 +209,7 @@
 .image-block {
   display: flex;
   flex-direction: column;
-  width: calc((5 / 6 * 100%) + 1.25rem);
+  width: calc(5 / 6 * 100%);
   height: 100%;
   gap: 0.5rem;
 }
@@ -231,15 +231,15 @@
   font-size: 40px;
 }
 
-.punch-card-styles {
+.punch-card {
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
 }
 
-.calculator-styles {
+.calculator {
   font-family: "Montserrat", sans-serif;
 }
 
-.star-wars-styles {
+.star-wars {
   font-family: "Press Start 2P", cursive;
   font-size: 34px;
 }
@@ -259,6 +259,10 @@
   height: auto;
   visibility: visible;
   transform: translateY(0%);
+}
+
+.project-image:hover .project-title {
+  visibility: hidden;
 }
 
 .project-card h3 {
